--- a/server/client/src/components/NavBar/NavBar.scss
+++ b/server/client/src/components/NavBar/NavBar.scss
@@ -9,6 +9,7 @@
     font-weight: 1000;
    }
    .listHeader{
+    
     font-size: 20px;
     
     font-weight: 900;
@@ -16,10 +17,9 @@
 
     .search{
         float: right;
-        background-color: #fcfcfc85;
-        opacity: 20;
         color: #48523d;
+        background-color: rgba(252, 252, 252, 0.2);
         font-weight: 900;
-        width: 50 px;
+        width: 30 px;
         }
 }
