--- a/server/client/src/pages/RegPage.scss
+++ b/server/client/src/pages/RegPage.scss
@@ -1,3 +1,5 @@
+@import "../App.scss";
+
 .box
 {
     background-color: #c4d3d3ff;
@@ -18,7 +20,7 @@
         .login {
             width: 80%;
             padding-left: 2%;
-            color: #48523d;
+            color: var(--green-front);
             background-color: #eceeeb;
             font-weight: 900;
             border: none;
@@ -27,7 +29,7 @@
         .pass {
             width: 80%;
             padding-left: 2%;
-            color: #48523d;
+            color: var(--green-front);
             background-color: #eceeeb;
             font-weight: 900;
             border: none;
@@ -36,7 +38,7 @@
         .city {
             width: 80%;
             padding-left: 2%;
-            color: #48523d;
+            color: var(--green-front);
             background-color: #eceeeb;
             font-weight: 900;
             border: none;
@@ -48,7 +50,7 @@
 
 
 .auth-page h3 {
-    color: #48523d;
+    color: var(--green-front);
     font-size: 50px;
     font-weight: 1000;
 }
