--- a/server/client/src/pages/SettingsPage/SettingsPage.scss
+++ b/server/client/src/pages/SettingsPage/SettingsPage.scss
@@ -1,25 +1,24 @@
-.settings {
-  .rowC {
-    margin-top: 3%;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .first {
-    width: 40%;
-    margin-left: 5%;
-  }
-
-  .second {
-    width: 40%;
-    margin-left: 10%;
-  }
-
-  .second input {
-    padding: 0 0 23% 0;
-  }
-
-  .button {
-    margin-top: 3%;
-  }
+.settings{
+    .rowC{
+        margin-top: 3%;
+        display:flex; flex-direction:row;}
+        .first{
+            width: 40%;
+            margin-left: 5%;
+        }
+        .second{
+            width: 40%;
+            margin-left: 10%;
+        }
+        .second input {
+            padding: 0 0 23% 0;
+        }
+    
+        .button{
+            margin-top: 3%;
+        }
+    .radio{
+        color: var(----font-color);
+        margin-left: -30%;
+    }
 }
