RegPage with combobox

--- a/server/client/src/pages/RegPage/RegPage.scss
+++ b/server/client/src/pages/RegPage/RegPage.scss
@@ -1,24 +1,26 @@
-.box {
-  .back {
-    width: 500px;
-    height: 450px;
-
-    .input {
-      margin-top: 2%;
-      width: 80%;
-      padding-left: 2%;
-      background-color: #eceeeb;
-      font-weight: 900;
-      border: none;
-      border-radius: 10px;
+.box
+{
+    .back
+    {
+        width: 500px;
+        height: 450px;
+        .input {
+            margin-top: 2%;
+            width: 80%;
+            padding-left: 2%;
+            background-color: #eceeeb;
+            font-weight: 900;
+            border: none;
+            border-radius: 10px;
+        }
     }
-  }
 }
 
 .box button {
-  margin-top: 5%;
-  width: 90%;
-  height: 10%;
-  font-size: 25px;
-  font-weight: 700;
+    margin-top: 5%;
+    width: 90%;
+    height: 10%;
+    font-size: 25px;
+    font-weight: 700;
 }
+
