--- a/server/client/src/components/Cropper/cropper.scss
+++ b/server/client/src/components/Cropper/cropper.scss
@@ -1,34 +1,5 @@
-.addPost
-{
-
-  .back
-  {
-    margin-top: 1%;
-    width: 500px;
-    max-height: 1000px;
-    .input {
-      margin-top: 2%;
-      width: 80%;
-      padding-left: 2%;
-      background-color: #eceeeb;
-      font-weight: 900;
-      border: none;
-      border-radius: 10px;
-    }
-  }
-  .photo
-  {
-    width: 300px;
-    height: 350px;
-  }
-}
-
-.addPost button {
+.App {
   margin-top: 5%;
-  width: 90%;
-  height: 10%;
-  font-size: 25px;
-  font-weight: 700;
 }
 .input__wrapper {
   margin-left: 100px;
