--- a/server/client/src/pages/SettingsPage/SettingsPage.scss
+++ b/server/client/src/pages/SettingsPage/SettingsPage.scss
@@ -5,21 +5,40 @@
     flex-direction: row;
   }
 
-  .first {
+  .fiels {
     width: 40%;
     margin-left: 5%;
   }
 
-  .second {
+  .sec {
     width: 40%;
     margin-left: 10%;
   }
 
-  .second input {
+  .sec input {
     padding: 0 0 23% 0;
   }
 
   .button {
     margin-top: 3%;
   }
+
+  .radio {
+    color: var(----font-color);
+    margin-left: -30%;
+  }
+}
+
+.container-s {
+  text-align: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  border-radius: 30px;
+}
+
+
+.cropper {
+  padding: 2%;
 }
