--- a/server/client/src/pages/AuthPage/AuthPage.scss
+++ b/server/client/src/pages/AuthPage/AuthPage.scss
@@ -1,16 +1,14 @@
 .auth {
+  .head {
+    font-size: 400%;
+  }
   .back {
     width: 400px;
-    height: 400px;
-
+    height: 500px;
     .input {
       margin-top: 2%;
       width: 80%;
       padding-left: 2%;
-      background-color: #eceeeb;
-      font-weight: 900;
-      border: none;
-      border-radius: 10px;
     }
   }
 }
