--- a/server/client/src/pages/SettingsPage/SettingsPage.scss
+++ b/server/client/src/pages/SettingsPage/SettingsPage.scss
@@ -4,17 +4,14 @@
     display: flex;
     flex-direction: row;
   }
-
   .fiels {
     width: 40%;
     margin-left: 5%;
   }
-
   .sec {
     width: 40%;
     margin-left: 10%;
   }
-
   .sec input {
     padding: 0 0 23% 0;
   }
@@ -22,22 +19,22 @@
   .button {
     margin-top: 3%;
   }
-
   .radio {
     color: var(----font-color);
     margin-left: -30%;
   }
+  .buttons {
+    margin: auto;
+  }
 }
-
 .container-s {
   text-align: center;
-  width: 80%;
+  max-width: 1360px;
   margin-left: auto;
   margin-right: auto;
   border: none;
   border-radius: 30px;
 }
-
 
 .cropper {
   padding: 2%;
